--- a/paez.html
+++ b/paez.html
@@ -18,14 +18,13 @@
 
   <section class="box">
     <img src="imagen/brandon.jpg" width="180" alt="" class="box-img">
-    <h1>Brandon Paez</h1>
+    <h1>Paez Brandon</h1>
     <h2>Software Engineer - Web Developer</h2>
     <p>Estudainte de Ingenieria en Sistemas con 1 año de experiencia en el desarrollo e implementación de soluciones de software y hardware, tanto en plataformas web como móviles. Habilidades destacadas en el manejo de lenguajes de programación como Java, Python y C++. Experiencia en trabajo con equipos multidisciplinarios, solución de problemas y capacidad para adaptarse a rápidos cambios tecnológicos. Certificado en Scrum Master y Metodologías Ágiles..</p>
     <ul>
       <li><a href="https://www.facebook.com/brandon19paez/"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
       <li><a href="https://www.instagram.com/bj_payes"><img height="40px" width="40px" src="imagen/instaicon.png" aria-hidden="true"></i></a></li>
     </ul>
-
   </section>
 </body>
 </html>
