--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="imagen/jandry.jpg" alt="">
             </div>
             <h4>Guanoluisa Jandry</h4>
-            <h6> <a href="guanoluisa.html">Mas informacion aqui..</a></h6>
+            <h6> <a href="Guanoluisa.html">Mas informacion aqui..</a></h6>
             <p>"Ejecuta tus conocimientos con la maestría del que sigue aprendiendo - Jonathan García-Allen"</p>
         </div>
         <div class="links">
