--- a/jandry.html
+++ b/jandry.html
@@ -44,6 +44,14 @@
         const nombre = document.getElementById("nombre").value;
         const edad = document.getElementById("edad").value;
         console.log(nombre, edad);
+
+        push(
+            ref(database, 'septimo'), 
+            {
+                name: nombre,
+                age: edad
+            }
+        );
     }
 
   </script>
